Adição de tabindex e classe jumpField para passar para proximo campo

--- a/src/app/admin/views/customer_save.phtml
+++ b/src/app/admin/views/customer_save.phtml
@@ -20,69 +20,69 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
-              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Nome" class="form-control">
+              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Nome" class="form-control" tabindex="1">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Razão Social</label>
             <div class="col-sm-10">
-              <input name="business_name" type="text" value="<?php echo $data['table']['business_name']; ?>" placeholder="Razão Social" class="form-control">
+              <input name="business_name" type="text" value="<?php echo $data['table']['business_name']; ?>" placeholder="Razão Social" class="form-control" tabindex="2">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Documento</label>
             <div class="col-sm-10">
-              <input name="document" type="text" value="<?php echo $data['table']['document']; ?>" placeholder="Documento" class="form-control">
+              <input name="document" type="text" value="<?php echo $data['table']['document']; ?>" placeholder="Documento" class="form-control" tabindex="3">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">E-mail</label>
             <div class="col-sm-10">
-              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="E-mail" class="form-control">
+              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="E-mail" class="form-control" tabindex="4">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">CEP</label>
             <div class="col-sm-2">
-              <input name="address_postcode" type="text" value="<?php echo $data['table']['address_postcode']; ?>" placeholder="CEP" class="form-control postcodeMask">
+              <input name="address_postcode" type="text" value="<?php echo $data['table']['address_postcode']; ?>" placeholder="CEP" class="form-control postcodeMask" tabindex="5">
             </div>
             <label class="col-sm-1 control-label">Estado</label>
             <div class="col-sm-2">
-              <input name="address_state" type="text" value="<?php echo $data['table']['address_state']; ?>" placeholder="Estado" class="form-control stateMask">
+              <input name="address_state" type="text" value="<?php echo $data['table']['address_state']; ?>" placeholder="Estado" class="form-control stateMask" tabindex="6">
             </div>
             <label class="col-sm-1 control-label">Cidade</label>
             <div class="col-sm-4">
-              <input name="address_city" type="text" value="<?php echo $data['table']['address_city']; ?>" placeholder="Cidade" class="form-control">
+              <input name="address_city" type="text" value="<?php echo $data['table']['address_city']; ?>" placeholder="Cidade" class="form-control" tabindex="7">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Endereço</label>
             <div class="col-sm-5">
-              <input name="address_street" type="text" value="<?php echo $data['table']['address_street']; ?>" placeholder="Endereço" class="form-control">
+              <input name="address_street" type="text" value="<?php echo $data['table']['address_street']; ?>" placeholder="Endereço" class="form-control" tabindex="8">
             </div>
             <label class="col-sm-1 control-label">Número</label>
             <div class="col-sm-1">
-              <input name="address_number" type="text" value="<?php echo $data['table']['address_number']; ?>" placeholder="Número" class="form-control">
+              <input name="address_number" type="text" value="<?php echo $data['table']['address_number']; ?>" placeholder="Número" class="form-control" tabindex="9">
             </div>
             <label class="col-sm-1 control-label">Complemento</label>
             <div class="col-sm-2">
-              <input name="address_complement" type="text" value="<?php echo $data['table']['address_complement']; ?>" placeholder="Complemento" class="form-control">
+              <input name="address_complement" type="text" value="<?php echo $data['table']['address_complement']; ?>" placeholder="Complemento" class="form-control" tabindex="10">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">DDD</label>
             <div class="col-sm-1">
-              <input name="phone_ddd" type="text" value="<?php echo $data['table']['phone_ddd']; ?>" placeholder="DDD" class="form-control phoneDDDMask">
+              <input name="phone_ddd" maxlength="2" type="text" value="<?php echo $data['table']['phone_ddd']; ?>" placeholder="DDD" class="form-control jumpField" tabindex="11">
             </div>
             <label class="col-sm-1 control-label">Telefone</label>
             <div class="col-sm-4">
-              <input name="phone_number" type="text" value="<?php echo $data['table']['phone_number']; ?>" placeholder="Telefone" class="form-control phoneMask">
+              <input name="phone_number" type="text" value="<?php echo $data['table']['phone_number']; ?>" placeholder="Telefone" class="form-control phoneMask" tabindex="12">
             </div>
           </div>
 
