--- a/src/app/admin/views/customer_save.phtml
+++ b/src/app/admin/views/customer_save.phtml
@@ -48,41 +48,53 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">CEP</label>
             <div class="col-sm-2">
-              <input name="address_postcode" type="text" value="<?php echo $data['table']['address_postcode']; ?>" placeholder="CEP" class="form-control postcodeMask" tabindex="5">
+              <div class="input-group">
+                <input name="address_postcode" type="text" value="<?php echo $data['table']['address_postcode']; ?>" placeholder="CEP" class="form-control postcodeMask postcode_ajax" tabindex="5">
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-primary ajax_address_btn">
+                    <i class="fa fa-search search"></i>
+                    <i class="fa fa-clock-o loading"></i>
+                  </button>
+                </span>
+              </div>
             </div>
             <label class="col-sm-1 control-label">Estado</label>
             <div class="col-sm-2">
-              <input name="address_state" type="text" value="<?php echo $data['table']['address_state']; ?>" placeholder="Estado" class="form-control stateMask" tabindex="6">
+              <input name="address_state" type="text" value="<?php echo $data['table']['address_state']; ?>" placeholder="Estado" class="form-control stateMask state_ajax" tabindex="6">
             </div>
             <label class="col-sm-1 control-label">Cidade</label>
             <div class="col-sm-4">
-              <input name="address_city" type="text" value="<?php echo $data['table']['address_city']; ?>" placeholder="Cidade" class="form-control" tabindex="7">
+              <input name="address_city" type="text" value="<?php echo $data['table']['address_city']; ?>" placeholder="Cidade" class="form-control city_ajax" tabindex="7">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Endereço</label>
-            <div class="col-sm-5">
-              <input name="address_street" type="text" value="<?php echo $data['table']['address_street']; ?>" placeholder="Endereço" class="form-control" tabindex="8">
+            <div class="col-sm-3">
+              <input name="address_street" type="text" value="<?php echo $data['table']['address_street']; ?>" placeholder="Endereço" class="form-control street_ajax" tabindex="8">
+            </div>
+            <label class="col-sm-1 control-label">Bairro</label>
+            <div class="col-sm-2">
+              <input name="address_area" type="text" value="<?php echo $data['table']['address_area']; ?>" placeholder="Bairro" class="form-control area_ajax" tabindex="9">
             </div>
             <label class="col-sm-1 control-label">Número</label>
             <div class="col-sm-1">
-              <input name="address_number" type="text" value="<?php echo $data['table']['address_number']; ?>" placeholder="Número" class="form-control" tabindex="9">
+              <input name="address_number" type="text" value="<?php echo $data['table']['address_number']; ?>" placeholder="Número" class="form-control number_ajax" tabindex="10">
             </div>
             <label class="col-sm-1 control-label">Complemento</label>
-            <div class="col-sm-2">
-              <input name="address_complement" type="text" value="<?php echo $data['table']['address_complement']; ?>" placeholder="Complemento" class="form-control" tabindex="10">
+            <div class="col-sm-1">
+              <input name="address_complement" type="text" value="<?php echo $data['table']['address_complement']; ?>" placeholder="Complemento" class="form-control" tabindex="11">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">DDD</label>
             <div class="col-sm-1">
-              <input name="phone_ddd" maxlength="2" type="text" value="<?php echo $data['table']['phone_ddd']; ?>" placeholder="DDD" class="form-control jumpField" tabindex="11">
+              <input name="phone_ddd" maxlength="2" type="text" value="<?php echo $data['table']['phone_ddd']; ?>" placeholder="DDD" class="form-control jumpField" tabindex="12">
             </div>
             <label class="col-sm-1 control-label">Telefone</label>
             <div class="col-sm-4">
-              <input name="phone_number" type="text" value="<?php echo $data['table']['phone_number']; ?>" placeholder="Telefone" class="form-control phoneMask" tabindex="12">
+              <input name="phone_number" type="text" value="<?php echo $data['table']['phone_number']; ?>" placeholder="Telefone" class="form-control phoneMask" tabindex="13">
             </div>
           </div>
 
