Ajuste no header CacheControl, retirando conexões externas de css/js

--- a/src/app/admin/views/layouts/login.phtml
+++ b/src/app/admin/views/layouts/login.phtml
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="/admin/images/favicon.png">
 
     <title>DIN DIGITAL</title>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,200,100' rel='stylesheet' type='text/css'>
+    <link href='/admin/css/google_open_sans.css' rel='stylesheet' type='text/css'>
+    <link href='/admin/css/google_raleway.css' rel='stylesheet' type='text/css'>
 
     <?php echo $data['assets']['css']['adm_login']; ?>
 
@@ -19,7 +19,7 @@
 
     {$CONTENT}
 
-    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="/admin/js/jquery-1.9.1.js"></script>
     <?php echo $data['assets']['js']['adm_login']; ?>
 
   </body>
