--- a/src/app/admin/views/admin_save.phtml
+++ b/src/app/admin/views/admin_save.phtml
@@ -31,6 +31,8 @@
             </div>
           </div>
 
+          {$URI}
+
           <div class="form-group">
             <label class="col-sm-2 control-label">E-mail</label>
             <div class="col-sm-10">
