--- a/src/app/admin/views/customer_save.phtml
+++ b/src/app/admin/views/customer_save.phtml
@@ -24,6 +24,8 @@
             </div>
           </div>
 
+          {$URI}
+
           <div class="form-group">
             <label class="col-sm-2 control-label">Razão Social</label>
             <div class="col-sm-10">
