--- a/src/app/admin/views/essential/config_save.phtml
+++ b/src/app/admin/views/essential/config_save.phtml
@@ -19,14 +19,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
-              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Seu nome" class="form-control">
+              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Seu nome" class="limit_text form-control" maxlength="100">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">E-mail</label>
             <div class="col-sm-10">
-              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="Seu e-mail, ele será usado para o login" class="form-control">
+              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="Seu e-mail, ele será usado para o login" class="limit_text form-control" maxlength="50">
             </div>
           </div>
 
