--- a/src/app/admin/views/newscat_save.phtml
+++ b/src/app/admin/views/newscat_save.phtml
@@ -27,7 +27,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control limit_text" maxlength="130">
             </div>
           </div>
 
