--- a/src/app/admin/views/page_save.phtml
+++ b/src/app/admin/views/page_save.phtml
@@ -51,7 +51,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control limit_text" maxlength="130">
             </div>
           </div>
 
@@ -74,14 +74,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
-              <textarea name="description" class="form-control" rows="4" placeholder="Descrição da página"><?php echo $data['table']['description']; ?></textarea>
+              <textarea name="description" class="form-control limit_text" maxlength="156" rows="4" placeholder="Descrição da página"><?php echo $data['table']['description']; ?></textarea>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords</label>
             <div class="col-sm-10">
-              <input name="keywords" class="tags" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
+              <input name="keywords" maxlength="255" class="tags" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
             </div>
           </div>
 
