--- a/src/app/admin/views/survey_save.phtml
+++ b/src/app/admin/views/survey_save.phtml
@@ -27,7 +27,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título" class="limit_text form-control" maxlength="130">
             </div>
           </div>
 
@@ -39,7 +39,7 @@
                 <div class="form-group">
                   <label class="col-sm-2 control-label">Questão</label>
                   <div class="col-sm-10">
-                    <input name="question[<?php echo $question['id_survey_question']; ?>]" type="text" value="<?php echo $question['question']; ?>" placeholder="Questão" class="form-control">
+                    <input name="question[<?php echo $question['id_survey_question']; ?>]" type="text" value="<?php echo $question['question']; ?>" placeholder="Questão" class="limit_text form-control" maxlength="130">
                   </div>
                 </div>
               <?php endforeach; ?>
@@ -48,7 +48,7 @@
                 <div class="form-group">
                   <label class="col-sm-2 control-label">Questão</label>
                   <div class="col-sm-10">
-                    <input name="question[]" type="text" value="" placeholder="Título" class="form-control">
+                    <input name="question[]" type="text" value="" placeholder="Título" class="limit_text form-control" maxlength="130">
                   </div>
                 </div>
               </div>
