Adicionando suporte a upload/delete/replace Issuu em Publication

--- a/src/app/admin/views/publication_list.phtml
+++ b/src/app/admin/views/publication_list.phtml
@@ -41,7 +41,7 @@
                   <td><?php echo $row['title']; ?></td>
                   <td class="text-center">
                     <?php if ( $row['has_issuu'] ): ?>
-                      <a class="label label-default" href="<?php echo $row['issuu_link']; ?>" title="Visualizar Arquivo no Issuu">
+                      <a class="label label-default" href="<?php echo $row['issuu_link']; ?>" title="Visualizar Arquivo no Issuu" target="_blank">
                         <i class="fa fa-download"></i>
                       </a>
                     <?php endif; ?>
