--- a/src/app/admin/views/publication_save.phtml
+++ b/src/app/admin/views/publication_save.phtml
@@ -31,6 +31,8 @@
                 <a href="<?php echo $data['table']['issuu_link']; ?>" target="_blank"><?php echo $data['table']['issuu_link']; ?></a>
                 <br />
                 <label class="checkbox-inline"><input type="checkbox" name="republish_issuu" />Atualizar Publicação Issuu</label>
+                <br />
+                <?php echo $data['table']['issuu_embed']; ?>
               </div>
             </div>
           <?php else: ?>
