--- a/src/app/admin/views/essential/config_save.phtml
+++ b/src/app/admin/views/essential/config_save.phtml
@@ -40,7 +40,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Avatar</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['avatar'] ?>
+              <?php echo $data['table']['avatar_uploader'] ?>
             </div>
           </div>
 
