--- a/src/app/admin/views/mailing_import.phtml
+++ b/src/app/admin/views/mailing_import.phtml
@@ -38,7 +38,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Arquivo</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['xls']; ?>
+              <?php echo $data['table']['xls_uploader']; ?>
             </div>
           </div>
 
