--- a/src/app/admin/views/newscat_save.phtml
+++ b/src/app/admin/views/newscat_save.phtml
@@ -20,7 +20,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="active">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="active" id="active" <?php if ($data['table']['active'] == '1'): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
@@ -36,14 +36,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="home">Home</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="is_home" id="is_home" <?php if ( $data['table']['is_home'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <input type="checkbox" name="is_home" id="is_home" <?php if ($data['table']['is_home'] == '1'): ?>checked="checked"<?php endif; ?> />
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['cover']; ?>
+              <?php echo $data['table']['cover_uploader']; ?>
             </div>
           </div>
 
