--- a/src/app/admin/views/pagecat_save.phtml
+++ b/src/app/admin/views/pagecat_save.phtml
@@ -36,7 +36,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['cover']; ?>
+              <?php echo $data['table']['cover_uploader']; ?>
             </div>
           </div>
 
