--- a/src/app/admin/views/photo_save.phtml
+++ b/src/app/admin/views/photo_save.phtml
@@ -44,7 +44,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Galeria</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['gallery'] ?>
+              <?php echo $data['table']['gallery_uploader'] ?>
             </div>
           </div>
 
