--- a/src/app/admin/views/socialmedia_credentials_save.phtml
+++ b/src/app/admin/views/socialmedia_credentials_save.phtml
@@ -73,6 +73,20 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label class="col-sm-2 control-label">ISSUU KEY</label>
+            <div class="col-sm-10">
+              <input name="issuu_key" type="text" value="<?php echo $data['table']['issuu_key']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">ISSUU SECRET</label>
+            <div class="col-sm-10">
+              <input name="issuu_secret" type="text" value="<?php echo $data['table']['issuu_secret']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
           <div class="form-group form-group-submit">
             <span class="loadingsubmit"></span>
             <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
