--- a/src/app/admin/views/essential/tweet_view.phtml
+++ b/src/app/admin/views/essential/tweet_view.phtml
@@ -18,7 +18,7 @@
           <div class="form-group">
             <label class="ccontrol-label">Enviado em <?php echo $tweet['date'] ?></label>
             <div>
-              <?php echo $tweet['msg']; ?>
+                <label class="checkbox-inline"><?php echo $tweet['msg']; ?></label>
             </div>
           </div>
         <?php endforeach; ?>
