--- a/src/app/admin/views/socialmedia_credentials_save.phtml
+++ b/src/app/admin/views/socialmedia_credentials_save.phtml
@@ -87,6 +87,20 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label class="col-sm-2 control-label">SoundCloud ID</label>
+            <div class="col-sm-10">
+              <input name="sc_client_id" type="text" value="<?php echo $data['table']['sc_client_id']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">SoundCloud Secret</label>
+            <div class="col-sm-10">
+              <input name="sc_client_secret" type="text" value="<?php echo $data['table']['sc_client_secret']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
           <div class="form-group form-group-submit">
             <span class="loadingsubmit"></span>
             <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
