--- a/src/app/admin/views/socialmedia_credentials_save.phtml
+++ b/src/app/admin/views/socialmedia_credentials_save.phtml
@@ -39,7 +39,7 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">FB ACCESS TOKEN (don't touch)</label>
+            <label class="col-sm-2 control-label">FB ACCESS TOKEN</label>
             <div class="col-sm-10">
               <input name="fb_access_token" type="text" value="<?php echo $data['table']['fb_access_token']; ?>" placeholder="" class="form-control">
             </div>
@@ -98,6 +98,13 @@
             <label class="col-sm-2 control-label">SoundCloud Secret</label>
             <div class="col-sm-10">
               <input name="sc_client_secret" type="text" value="<?php echo $data['table']['sc_client_secret']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
+            <div class="form-group">
+            <label class="col-sm-2 control-label">SoundCloud Token</label>
+            <div class="col-sm-10">
+                <input name="sc_token" type="text" value="<?php echo $data['table']['sc_token']; ?>" placeholder="" class="form-control">
             </div>
           </div>
 
