--- a/src/app/admin/views/essential/log_view.phtml
+++ b/src/app/admin/views/essential/log_view.phtml
@@ -42,7 +42,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Seção</label>
             <div class="col-sm-10">
-              <label class="checkbox-inline"><?php echo $data['table']['name']; ?></label>
+              <label class="checkbox-inline"><?php echo $data['table']['tbl']; ?></label>
             </div>
           </div>
 
