--- a/src/app/admin/views/essential/log_list.phtml
+++ b/src/app/admin/views/essential/log_list.phtml
@@ -22,7 +22,7 @@
             <?php echo $data['search']['action']; ?>
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['search']['name']; ?>
+            <?php echo $data['search']['tbl']; ?>
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -48,7 +48,7 @@
                   <td><?php echo $row['inc_date']; ?></td>
                   <td><?php echo $row['admin']; ?></td>
                   <td><?php echo $row['action']; ?></td>
-                  <td><?php echo $row['name']; ?></td>
+                  <td><?php echo $row['tbl']; ?></td>
                   <td><?php echo $row['description']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edit" href="#">
