--- a/src/app/admin/views/mailing_group_list.phtml
+++ b/src/app/admin/views/mailing_group_list.phtml
@@ -34,7 +34,7 @@
             </thead>
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
-                <tr name="<?php echo $this->_data['entity']['name']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
+                <tr name="<?php echo $this->_data['entity']['tbl']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
                   <td><input class="delete" type="checkbox" name="delete[]" /></td>
                   <td><?php echo $row['name']; ?></td>
                   <td class="text-center">
