--- a/src/app/admin/views/socialmedia_credentials_save.phtml
+++ b/src/app/admin/views/socialmedia_credentials_save.phtml
@@ -101,10 +101,31 @@
             </div>
           </div>
 
-            <div class="form-group">
+          <div class="form-group">
             <label class="col-sm-2 control-label">SoundCloud Token</label>
             <div class="col-sm-10">
                 <input name="sc_token" type="text" value="<?php echo $data['table']['sc_token']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
+            <div class="form-group">
+            <label class="col-sm-2 control-label">YouTube ID</label>
+            <div class="col-sm-10">
+              <input name="youtube_id" type="text" value="<?php echo $data['table']['youtube_id']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">YouTube Secret</label>
+            <div class="col-sm-10">
+              <input name="youtube_secret" type="text" value="<?php echo $data['table']['youtube_secret']; ?>" placeholder="" class="form-control">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">YouTube Token</label>
+            <div class="col-sm-10">
+              <textarea name="youtube_token" class="form-control" rows="4" placeholder=""><?php echo $data['table']['youtube_token']; ?></textarea>
             </div>
           </div>
 
