--- a/src/app/site/views/index.phtml
+++ b/src/app/site/views/index.phtml
@@ -1,29 +1,23 @@
-<!-- Jumbotron -->
  <div class="jumbotron">
-   <h1>Skeleton DIN :)</h1>
-   <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-   <a class="btn btn-large btn-success" href="#">Get started today</a>
+   <h1><?php echo $data['settings']['home_title'] ?></h1>
+   <p class="lead"><?php echo $data['settings']['home_description'] ?></p>
+   <h2><?php echo $data['settings']['title'] ?></h2>
+   <p class="lead"><?php echo $data['settings']['description'] ?></p>
  </div>
 
  <hr>
 
- <!-- Example row of columns -->
- <div class="row-fluid">
-   <div class="span4">
-     <h2>Heading</h2>
-     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-     <p><a class="btn" href="#">View details &raquo;</a></p>
-   </div>
-   <div class="span4">
-     <h2>Heading</h2>
-     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-     <p><a class="btn" href="#">View details &raquo;</a></p>
-  </div>
-   <div class="span4">
-     <h2>Heading</h2>
-     <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-     <p><a class="btn" href="#">View details &raquo;</a></p>
-   </div>
- </div>
+ <?php if(isset($data['news']) && count($data['news'])): ?>
+    <div class="row-fluid">
+        <?php foreach ($data['news'] as $row): ?>
+        <div class="span4">
+            <h3><?php echo $row['title'] ?></h3>
+            <h6><?php echo $row['date'] ?></h6>
+            <p><?php echo $row['category'] ?></p>
+            <p><a class="btn" href="<?php echo $row['uri'] ?>">Saiba mais &raquo;</a></p>
+        </div>
+        <?php endforeach; ?>
+    </div>
+ <?php endif; ?>
 
  <hr>
