Criação de menu e página de lista de notícias

--- a/src/app/site/views/includes/header.phtml
+++ b/src/app/site/views/includes/header.phtml
@@ -1,17 +1,22 @@
 <div class="masthead">
   <h3 class="muted">DIN DIGITAL SKELETON</h3>
+  
+  <?php if(isset($data['nav']) && count($data['nav'])): ?>
   <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
         <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Downloads</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <?php foreach ($data['nav'] as $row): ?>
+            <li class="active">
+                <a title="<?php echo $row['title']; ?>" href="<?php echo $row['uri']; ?>">
+                    <?php echo $row['title']; ?>
+                </a>
+            </li>
+          <?php endforeach; ?>
         </ul>
       </div>
     </div>
   </div><!-- /.navbar -->
+  <?php endif; ?>
+  
 </div>
