Organização de assets do site e ajustes para visualização de menu com dropdown e correção de links de institucional

--- a/src/app/site/views/index.phtml
+++ b/src/app/site/views/index.phtml
@@ -1,9 +1,8 @@
- <div class="jumbotron">
-   <h1><?php echo $data['settings']['home_title'] ?></h1>
-   <p class="lead"><?php echo $data['settings']['home_description'] ?></p>
-   <h2><?php echo $data['settings']['title'] ?></h2>
-   <p class="lead"><?php echo $data['settings']['description'] ?></p>
- </div>
+<div class="hero-unit">
+  <h1><?php echo $data['settings']['home_title'] ?></h1>
+  <p><?php echo $data['settings']['home_description'] ?></p>
+  <p><a href="https://github.com/dindigital/skeleton" target="_blank" class="btn btn-primary btn-large">Github &raquo;</a></p>
+</div>
 
  <hr>
 
