--- a/src/app/site/views/news_list.phtml
+++ b/src/app/site/views/news_list.phtml
@@ -2,19 +2,25 @@
    <h1>Lista de Notícias</h1>
  </div>
 
-<div class="row">
-    <ul>
-        <?php foreach ($this->_data['news'] as $row): ?>
-            <li>
-                <a href="<?php echo $row['uri']; ?>" title="<?php echo $row['title']; ?>">
-                    <?php echo $row['date']; ?> - <?php echo $row['title']; ?>
-                </a>
-                <p>
-                    <?php echo $row['head']; ?>
-                </p>
-            </li>
-        <?php endforeach; ?>
-    </ul>
-</div>
+<table class="table table-bordered">
+<thead>
+  <tr>
+    <th width="100">&nbsp;</th>
+    <th width="100">Data</th>
+    <th>Título</th>
+    <th width="100">&nbsp;</th>
+  </tr>
+</thead>
+<tbody>
+  <?php foreach ($this->_data['news'] as $row): ?>
+  <tr>
+    <td><?php echo $row['cover']; ?></td>
+    <td><?php echo $row['date']; ?></td>
+    <td><?php echo $row['title']; ?></td>
+    <td><a class="btn btn-default btn-lg" href="<?php echo $row['uri']; ?>" title="<?php echo $row['title']; ?>">Saiba Mais</a></td>
+  </tr>
+  <?php endforeach; ?>
+</tbody>
+</table>
 
  <hr>
