--- a/public/site/css/base.css
+++ b/public/site/css/base.css
@@ -1,4 +1,14 @@
 body {
-  padding-top: 60px;
-  padding-bottom: 40px;
+  padding-top: 70px;
+  padding-bottom: 30px;
+}
+
+.theme-dropdown .dropdown-menu {
+  position: static;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.theme-showcase > p > .btn {
+  margin: 5px 0;
 }
