--- a/src/app/site/views/layouts/layout.phtml
+++ b/src/app/site/views/layouts/layout.phtml
@@ -13,11 +13,11 @@
 
   </head>
 
-  <body>
+  <body role="document">
           
       {$HEADER}
           
-      <div class="container">
+      <div class="container theme-showcase" role="main">
           
           {$CONTENT}
           
