Inclusão de remover arquivo em todas as áreas com upload

--- a/src/app/admin/views/admin_save.phtml
+++ b/src/app/admin/views/admin_save.phtml
@@ -50,6 +50,8 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Avatar</label>
             <div class="col-sm-10">
+              <label><input type="checkbox" name="avatar_delete" /> Remover arquivo</label>
+              <br />
               <?php echo $data['table']['avatar_uploader'] ?>
             </div>
           </div>
