--- a/src/app/admin/views/pagecat_save.phtml
+++ b/src/app/admin/views/pagecat_save.phtml
@@ -36,6 +36,8 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Capa</label>
             <div class="col-sm-10">
+              <label><input type="checkbox" name="cover_delete" /> Remover arquivo</label>
+              <br />
               <?php echo $data['table']['cover_uploader']; ?>
             </div>
           </div>
