--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -84,6 +84,8 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Arquivo</label>
             <div class="col-sm-10">
+              <label><input type="checkbox" name="file_delete" /> Remover arquivo</label>
+              <br />
               <?php echo $data['table']['file_uploader']; ?>
             </div>
           </div>
