--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -42,7 +42,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/admin/config/save/">Meus Dados</a></li>
                 <li class="divider"></li>
-                <li><a href="/admin/admin_auth/logout/">Logout</a></li>
+                <li><a href="/admin/logout/">Logout</a></li>
               </ul>
             </li>
           </ul>
