Ajusta link_prefix e seus links subsequentes

--- a/src/app/admin/views/essential/trash_list.phtml
+++ b/src/app/admin/views/essential/trash_list.phtml
@@ -1,4 +1,4 @@
-<input type="hidden" id="link_prefix" value="/admin/trash/" />
+<input type="hidden" id="link_prefix" value="/admin/trash" />
 
 <div class="row">
   <div class="col-md-12">
