--- a/src/app/admin/views/poll_list.phtml
+++ b/src/app/admin/views/poll_list.phtml
@@ -1,4 +1,4 @@
-<input type="hidden" id="link_prefix" value="/admin/<?php echo $this->_data['entity']['tbl']; ?>/" />
+<input type="hidden" id="link_prefix" value="/admin/<?php echo $this->_data['entity']['tbl']; ?>" />
 
 <div class="row">
   <div class="col-md-12">
