Aplica novo sistema de controllers em - Audio, Customer, Mailing, Photo, Publication, Tag, Survey, Poll, Video

--- a/src/app/admin/views/mailing_import.phtml
+++ b/src/app/admin/views/mailing_import.phtml
@@ -12,6 +12,8 @@
 
         <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;" onsubmit="return false;">
 
+          <input type="hidden" id="link_prefix" value="/admin/mailing" />
+
           <input type="hidden" name="redirect" value="save" />
 
           <div class="form-group form-group-submit">
