Atualização is_del

--- a/src/app/Admin/Views/survey_list.phtml
+++ b/src/app/Admin/Views/survey_list.phtml
@@ -38,7 +38,7 @@
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr name="<?php echo $this->_data['entity']['tbl']; ?>" id="<?php echo $row[$this->_data['entity']['id']]; ?>">
                   <td><input class="delete" type="checkbox" name="delete[]" /></td>
-                  <td><input class="setActive" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> /></td>
+                  <td><input class="setActive" type="checkbox" <?php if ( $row['is_active'] == '1' ): ?> checked="checked"<?php endif; ?> /></td>
                   <td><?php echo $row['title']; ?></td>
                   <td><?php echo $row['inc_date']; ?></td>
                   <td class="text-center">
