--- a/src/app/Admin/Views/publication_save.phtml
+++ b/src/app/Admin/Views/publication_save.phtml
@@ -17,12 +17,7 @@
 
           {$SUBMIT}
 
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="active">Ativo</label>
-            <div class="col-sm-10">
-              <label class="checkbox-inline"><input type="checkbox" name="active" id="active" <?php if ( $data['table']['active'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
-            </div>
-          </div>
+          {$ACTIVE}
 
           <?php if ( $data['table']['has_issuu'] == '1' ): ?>
             <div class="form-group">
